<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp" >

    <TextView
        android:id="@+id/listview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginBottom="12sp"
        android:layout_marginStart="12sp"
        android:textColor="@color/black"
        android:maxLines="1"
        android:text="@string/test_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/listview_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:layout_toStartOf="@id/listview_unit"
        android:textStyle="bold"
        android:maxLines="1"
        android:text="@string/text_num"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/listview_unit"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginBottom="12sp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:maxLines="1"
        android:text="@string/unit_test" android:textSize="16sp" />

</RelativeLayout>